[gd_scene load_steps=2 format=3 uid="uid://bcjxsfab340w8"]

[ext_resource type="Script" path="res://scripts/misc/NPSdors.gd" id="1_w4hwe"]

[node name="Control" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.998461, 0.998461)
script = ExtResource("1_w4hwe")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -504.5
offset_top = -281.5
offset_right = 504.5
offset_bottom = 281.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Door1" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 75.0
offset_top = 92.0
offset_right = 266.0
offset_bottom = 371.0
pivot_offset = Vector2(127, 176)

[node name="Door2" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 395.0
offset_top = 95.0
offset_right = 586.0
offset_bottom = 374.0

[node name="Door3" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 723.0
offset_top = 100.0
offset_right = 914.0
offset_bottom = 379.0

[node name="Village" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 397.0
offset_top = 432.0
offset_right = 598.0
offset_bottom = 522.0
text = "В город"

[connection signal="pressed" from="ColorRect/Door1" to="." method="_on_door_1_pressed"]
[connection signal="pressed" from="ColorRect/Door2" to="." method="_on_door_2_pressed"]
[connection signal="pressed" from="ColorRect/Door3" to="." method="_on_door_3_pressed"]
[connection signal="pressed" from="ColorRect/Village" to="." method="_on_village_pressed"]
